1998-10-24  Yo Ric Dude  <ricdude@ix.netcom.com>

	* audio_alsa.c: reworked alsa card detection per patch from 
	Andrew Clausen <clausen@alphalink.com.au>

Wed Oct 21 23:57:11 1998  Raph Levien  <raph@gimp.org>

	* esdplay.c (play_file): The computation of bytes_per_frame was
	not taking the number of channels into account. It does now.

1998-10-21  Yo Ric Dude  <ricdude@ix.netcom.com>

	* esddsp.c, esddsp.in: give esddsp some class, allow for passing
	of identifying name to esd via environment variable

Tue Oct 20 20:43:48 PDT 1998 Manish Singh <yosh@gimp.org>

	* clients.c: make optional use of tcp_wrappers

	* Makefile.am, configure.in: OSS runs on other platforms too, so
 	explictly special case for linux for esddsp. Also don't install
 	the wrapper script if esddsp isn't supported. Add a check for
 	libwrap and friends. Some reorganization.

	* esddsp.c: respond to SNDCTL_DSP_GETCAPS (and say we can't do much)
	More evilness to get multiple x11amps to coexist (optional)

	* esddsp.in: exec instead of just run

1998-10-19  Yo Ric Dude  <ricdude@ix.netcom.com>

	* Makefile.am, esddsp.in, configure.in: automatically build the
	esddsp wrapper script for Linux only

Sun Oct 18 21:33:26 PDT 1998 Manish Singh <yosh@gimp.org>

	* Makefile.am: add TODO and esddsp.c to EXTRA_DIST

	* esddsp.c: somewhat of a rewrite. We only try to use esound
	if an open() fails. This lets the no esound case fall back to
	/dev/dsp, and also doesn't do a strcmp on every call to open.
	Got rid of the varargs junk in ioctl, I've never seen an ioctl
	with more than one extra arg anyway (please tell me if I'm wrong).
	Reworked the code, so we're not so x11amp specific, i.e. the
	esound socket is opened immediately after all the info is set.
	We also make sure we don't try to set it again. Default to mono
	output per OSS specs. open/close/open with multiple formats
	works. Provide a default value for GETFMTS. The result of all
	this is that libesddsp works with a lot more stuff now. I've